try to avoid double tap zoom on mobile when rapidly clicking buttons

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .app {
+  font-size: 14px;
   padding: 20px;
 }
 
@@ -10,13 +11,13 @@
 
 .abilities-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 110px);
+  grid-template-columns: repeat(auto-fill, 100px);
   justify-items: left;
 }
 
 .ability {
-  padding-right: 20px;
-  padding-bottom: 20px;
+  padding-right: 10px;
+  padding-bottom: 10px;
 }
 
 .ability-name {
